# mcp_capture_the_flag

./: README.md  pyproject.toml
client/: __init__.py  main.py
server/: __init__.py  main.py  tools.py
tests/: __init__.py  conftest.py
tests/client/: __init__.py  test_main.py
tests/integration/: test_end_to_end.py
tests/server/: __init__.py  test_explain_file.py  test_get_file.py  test_list_files.py  test_tools.py
